# mkfs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
ext2/: Cargo.toml
ext2/src/: address.rs  block_group.rs  bytefield.rs  create.rs  dir.rs  error.rs  file.rs  inode.rs  lib.rs  read.rs  superblock.rs  write.rs
ext2/tests/: common.rs  read.rs  write.rs
ext2/tests/filesystems/: empty.img  read.img
filesystem/: Cargo.toml
filesystem/src/: lib.rs
filesystem/src/block/: mem.rs  mod.rs
src/: main.rs
